<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.islogin.AddStoryActivity"
    android:background="#8EC9BB">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_60sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_upload"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_250sdp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    app:tint="@color/teal_200"
                    tools:srcCompat="@drawable/ic_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_200"
                        android:fontFamily="@font/roboto"
                        android:paddingHorizontal="25dp"
                        android:text="@string/camera" />

                    <Button
                        android:id="@+id/btn_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:backgroundTint="@color/teal_200"
                        android:fontFamily="@font/roboto"
                        android:paddingHorizontal="25dp"
                        android:text="@string/galery" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/share_location" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchCompat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_5sdp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="64dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:gravity="start|top"
                    android:hint="@string/description_title"
                    android:inputType="textMultiLine"
                    android:lines="5" />

                <Button
                    android:id="@+id/btn_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:fontFamily="@font/roboto"
                    android:text="@string/upload" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:theme="@style/progressBarColour"
            android:id="@+id/loadingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </RelativeLayout>
</layout>