<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#8EC9BB"
    tools:context=".view.ui.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_11sdp">

                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_11sdp"
                        android:background="@drawable/logo"
                        android:contentDescription="@string/this_is_an_image_logo" />

                    <TextView
                        android:id="@+id/tv_tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:alpha="0"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/title_signup_page"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:alpha="0"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/name"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameEditTextLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:alpha="0"
                        app:startIconDrawable="@drawable/ic_profile">

                        <com.arkan.ridwan.storyapps.view.customview.CustomEditText
                            android:id="@+id/nameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#DADADA"
                            android:ems="10"
                            android:fontFamily="@font/open_sans"
                            android:hint="Enter Your Name"
                            android:inputType="text"
                            app:passwordToggleEnabled="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:alpha="0"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/email"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailEditTextLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:alpha="0"
                        app:startIconDrawable="@drawable/ic_email">

                        <com.arkan.ridwan.storyapps.view.customview.CustomEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#DADADA"
                            android:ems="10"
                            android:fontFamily="@font/open_sans"
                            android:hint="Enter Your Email"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/passwordTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:alpha="0"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/password"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordEditTextLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:alpha="0"
                        app:startIconDrawable="@drawable/ic_password">

                        <com.arkan.ridwan.storyapps.view.customview.CustomEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#DADADA"
                            android:fontFamily="@font/open_sans"
                            android:hint="Enter Your Password"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/signupButton"
                        android:layout_width="300dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="32dp"
                        android:alpha="0"
                        android:backgroundTint="@color/teal_200"
                        android:fontFamily="@font/roboto"
                        android:text="@string/signup" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/masukMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:alpha="0"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/sudah_punya_akun"
                            android:textColor="#000000"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/masukText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:alpha="0"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/masuk_yuk"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/progressBarColour"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>